[tool.poetry]
name = "dhti-elixir-template"
version = "0.0.1"
description = "DHTI Elixir Template"
authors = ["DHTI"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9.0,<4.0"
dhti-elixir-base = { git = "https://github.com/dermatologist/dhti-elixir-base.git", branch = "develop" }

[tool.poetry.group.dev.dependencies]
langchain-cli = ">=0.0.4"
fastapi = "^0.104.0"
sse-starlette = "^2.1.3"
tox-poetry = "^0.5.0"

[tool.langserve]
export_module = "dhti_elixir_template"
export_attr = "chain"


[tool.poetry.extras]
docs = ["Sphinx", "sphinx-rtd-theme", "sphinxcontrib-napoleon", "recommonmark"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
